<resources>
    <string name="app_name">XploreMalang</string>
    <string name="deskripsi_bromo">deskripsi_bromo</string>
    <string name="title_activity_nav__drawer">Xplore Malang</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_application_id">449994548870624</string>
    <string name="facebook_login_protocol_scheme">fb449994548870624</string>
    <string name="about">Xplore Malang adalah sebuah aplikasi mobule yang bergerak di bidang pariwisata, khususnya pariwisata wilayah Malang. Aplikasi ini berguna untuk sebagai asisten Anda untuk menemani perjalanan Anda di Malang. Xplore Malang masih dalam tahap pengembangan. Maka daripada itu kami sebagai owner Xplore Malang meminta untuk pengguna untuk memberikan feedback aplikasi ini ke alamat xploremalang.apps@gmail.com</string>
    <string name="title_activity__utama">Activity_Utama</string>
    <string name="nama_collapse">Nama</string>

    <array name="kontenNama">
        <item>Semua Kategori</item>
        <item>Pariwisata</item>
        <item>Kuliner</item>
        <item>Oleh Oleh</item>
    </array>

    <array name="pilihan">
        <item>Pariwisata</item>
        <item>Kuliner</item>
        <item>Oleh Oleh</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cobamaps">Map</string>
    <string name="title_activity_maap">Map</string>
    <string name="aprilia_ari_widyastuti">Aprilia Ari Widyastuti</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_pengaturan">Settings</string>
    <string name="key_notifications_new_message_ringtone" />
    <string name="key_send_feedback" />
    <string name="summary_choose_ringtone" />
    <string name="choose_email_client" />
    <string name="key_vibrate" />
    <string name="summary_vibrate" />
    <string name="title_vibrate" />
    <string name="pref_header_about" />
    <string name="summary_support" />
    <string name="title_send_feedback" />
    <string name="pref_title_notifications" />
    <string name="notifications_new_message" />
    <string name="title_new_notification_sound" />
</resources>
